--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,18 @@
 @import "reset";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import "homes/index";
 @import "items";
+@import "items/index";
+@import "items/new";
+@import "items/show";
+@import "employees/new";
+@import "employees/index";
+
+* {
+  box-sizing: border-box;
+}
+
+body{
+  background-color: lightgrey
+}
