商品編集、削除可能

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,7 @@
 @import "items";
 @import "items/index";
 @import "items/new";
-@import "items/show";
+@import "items/edit";
 @import "employees/new";
 @import "employees/index";
 
